--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
         <!-- BG IMG -->
         <div class="container px-4" style="background-color: #013a71;">
             <div class="row gx-5">
-                <div class="col-lg-6 col-md-10 col-sm-12" id="mtext">
+                <div class="col-lg-6 col-md-10 col-sm-12 d-flex flex-column justify-content-start" id="mtext">
                     <div class="p-3" id="ctext">Innovative, compassionate Diarrhea care that's close to home.
                         <br>
                         <a href=" Blog-Pages/Diarrhea.html"> <button type="button" class="button1">Learn
